# papers

./: .gitignore  Main.tex  README.md
2010-rarrays/: Cuts.tex  RArrays.tex
2010-rarrays/code/: Replicate.hs
2010-rarrays/data/: Benchmarks.numbers
2011-stencil/: Main.tex
2011-stencil/reviews/: haskell2011-review.txt  icfp2011-review-29.txt
2011-stencil/section/: 01-Introduction.tex  02-Laplace.tex  08-RelatedWork.tex  99-Cuts.tex
2011-stencil/style/: utils.sty
2012-guiding/distro/: haskell13-lippmeier.ps
2012-guiding/figs/: guiding-eval-order.ps  guiding-zipwith-partitions.ps
2012-guiding/section/: 02-Problem.tex  04-Structure.tex  05-Applications.tex
2013-accoptim/: Makefile  acc-optim.bib  embedfonts.sh
2013-accoptim/section/: 01-Introduction.tex  02-Optimising.tex  03-Sharing.tex
2013-series/: Main.bib  Main.tex
2013-series/figures/: Process.tex
2013-series/section/: 01-Introduction.tex  03-Rates.tex  04-Loops.tex  05-Conversion.tex  06-Benchmarks.tex  A2-Slurping.tex
2014-filters/: Main.bib
2014-filters/benches/: ClosestPairs_Unfused.c  Normalise2_Megiddo.c  Normalise2_Stream.c  Normalise2_Unfused.c  bench.sh
2014-filters/figures/: ex1-base.graffle
2016-dsim/: Main.bib  Main.tex
2016-polarized/: Main.bib  Main.tex
done/2017-machine/code/: machine-fusion.cabal
done/2017-machine/code/main/: CountProcessStates.hs
done/2017-machine/code/src/Machine/: Base.hs  Combinator.hs  Execute.hs  New.hs  Pretty.hs
done/2017-machine/code/src/Machine/Combinator/: Alt.hs  Filter.hs  Group.hs  Map.hs  Merge.hs  Scan.hs  Zip.hs
done/2017-machine/code/src/Machine/Execute/: Eval.hs  Feed.hs  Inject.hs  Shake.hs
done/2017-machine/code/src/Machine/Transform/: Fuse.hs  StripLabels.hs
done/2017-machine/code/src/Test/: Comb.hs  Stat.hs
done/2017-machine/code/src/Test/Eval/: Map.hs
done/2017-machine/code/src/Test/Fuse/: DiamondAlt.hs  DiamondZip.hs  GroupMerge.hs  Map.hs  Merge.hs
done/2017-machine/code/src/Test/Process/: Map.hs
figures/: folds-drain.graffle  maps.graffle
reference/: Flow.hs
section/: 01-Introduction.tex  02-Streams.tex  03-Chunked.tex  04-Shuffling.tex  05-Benchmarks.tex  06-Datum.tex  07-Related.tex
style/: utils.sty
work/2016-dsim/code/lambda-dsim/: README  lambda-dsim.cabal
work/2016-dsim/code/lambda-dsim/Lambda/Core/: Exp.hs
(+1103 files in other folders)
